/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details take a look at the 'Building Java & JVM projects' chapter in the Gradle
 * User Manual available at https://docs.gradle.org/8.0.2/userguide/building_java_projects.html
 */

plugins {
    id 'java'
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
    // jmh-gradle-plugin
    //id "me.champeau.jmh" version "0.7.2"
    // publish to local mvn-repo
    id 'maven-publish'
}

repositories {
    // Use Maven Central for resolving dependencies.
    maven{url = 'https://mirrors.cloud.tencent.com/nexus/repository/maven-public/' }
    mavenCentral()
}
// pub to local, for jmh-benchmark to import
publishing {
    publications {
        myLibrary(MavenPublication) {
            groupId = 'com.z.lament.obrc'
            artifactId = 'obrc'
            version = '1.0'

            from components.java
        }
    }
}


dependencies {

    // https://mvnrepository.com/artifact/org.openjdk.jmh/jmh-core
    implementation 'org.openjdk.jmh:jmh-core:1.37'

    // https://mvnrepository.com/artifact/org.openjdk.jmh/jmh-generator-annprocess
    implementation 'org.openjdk.jmh:jmh-generator-annprocess:1.37'

    // Use JUnit Jupiter for testing.
    testImplementation 'org.junit.jupiter:junit-jupiter:5.9.1'

    // This dependency is used by the application.
    implementation 'com.google.guava:guava:31.1-jre'
}


// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs.addAll('--enable-preview','--add-modules=jdk.incubator.vector')
}

application {
    // Define the main class for the application.
    mainClass = 'com.z.lament.obrc.App'
    // Define the application's default properties.
    applicationDefaultJvmArgs = ['--enable-preview','--add-modules=jdk.incubator.vector']
}

tasks.named('test') {
    // Use JUnit Platform for unit tests.
    useJUnitPlatform()
}
